--- a/css/style.css
+++ b/css/style.css
@@ -1,376 +1,1 @@
-/* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_projects.scss */
-.projects-xs {
-  display: flex;
-  flex-direction: column;
-}
-
-/* line 4, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_projects.scss */
-.projects-xs .project-card {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  border: 1px solid black;
-  border-radius: 15px;
-  margin: 15px;
-  background-color: #e9c46a;
-  box-shadow: 2em 0 3em 0.2em #2a9d8f;
-}
-
-/* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_projects.scss */
-.projects-xs .project-card img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-}
-
-/* line 2, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-* {
-  box-sizing: border-box;
-}
-
-/* line 9, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-body, h1, h2, h3 {
-  margin: 0;
-  padding: 0;
-}
-
-/* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-ul, a, li {
-  text-decoration: none;
-  list-style-type: none;
-  color: black;
-}
-
-/* line 20, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-a:visited {
-  color: black;
-}
-
-/* line 24, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-a:hover {
-  text-decoration: underline;
-}
-
-/* line 29, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-.wrapper {
-  background-color: #f4a261;
-}
-
-/* line 35, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-.info {
-  line-height: 1.5rem;
-  font-size: 12px;
-}
-
-/* line 39, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-.coding {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  height: 72vh;
-  font-size: 16px;
-  border: 1px solid black;
-  border-radius: 15px;
-  margin: 15px;
-  background-color: #e9c46a;
-  box-shadow: -0.2em 0 1em 0.1em #2a9d8f;
-}
-
-/* line 55, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-.scheme {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  text-align: left;
-  height: auto;
-  font-size: 14px;
-  padding: 15px;
-  border: 1px solid black;
-  border-radius: 15px;
-  margin: 15px;
-  background-color: #e9c46a;
-  box-shadow: -0.2em 0 1em 0.1em #2a9d8f;
-}
-
-/* line 68, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-.scheme a {
-  font-size: 24px;
-}
-
-/* line 71, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-.scheme h1 {
-  margin: 15px;
-  text-align: center;
-}
-
-/* line 75, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_base.scss */
-.scheme p {
-  font-size: 16px;
-}
-
-/* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.nav-xs {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  height: 100px;
-}
-
-/* line 10, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.logo {
-  background-color: black;
-  border-radius: 50%;
-  color: white;
-  width: auto;
-  font-size: 2rem;
-  margin: 10px;
-}
-
-/* line 18, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.logo > a {
-  color: white;
-  text-decoration: none;
-}
-
-/* line 25, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.menu-xs {
-  display: inline-block;
-  padding: 10px;
-  margin: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-/* line 34, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.ham1, .ham2, .ham3 {
-  background-color: white;
-  width: 35px;
-  height: 5px;
-  margin: 6px 0;
-  transition: 0.4s;
-}
-
-/* line 42, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.change .ham1 {
-  transform: translate(0, 11px) rotate(-45deg);
-}
-
-/* line 46, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.change .ham2 {
-  opacity: 0;
-}
-
-/* line 48, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.change .ham3 {
-  transform: translate(0, -11px) rotate(45deg);
-}
-
-/* line 54, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.navigation {
-  display: none;
-}
-
-/* line 57, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_nav.scss */
-.vis-on {
-  display: block;
-  width: 100vw;
-  height: auto;
-  background-color: #f4a261;
-  font-size: 2.2rem;
-  z-index: 1;
-}
-
-/* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
-.banner-xs {
-  display: flex;
-  flex-direction: column;
-  background-image: url("../images/banner.jpg");
-  background-size: cover;
-  background-position: center;
-  height: calc(100vh - 100px);
-  overflow: hidden;
-  padding: 0 10px;
-}
-
-/* line 10, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
-.banner-xs .card {
-  text-align: center;
-  margin: auto;
-}
-
-/* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
-.banner-xs .card .card-inner {
-  background-color: #e9c46a;
-  border-radius: 15px;
-  font-size: 20px;
-  color: black;
-  padding: 1vh 15px;
-  box-shadow: -1em 0 5em 3em #f4a261;
-}
-
-/* line 23, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
-.scroll-down {
-  text-align: center;
-  font-size: 2rem;
-  text-transform: uppercase;
-  margin: 0 auto;
-  padding-bottom: 5px;
-}
-
-/* line 29, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
-.scroll-down p {
-  color: white;
-  margin: 0;
-}
-
-/* line 32, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_banner.scss */
-.scroll-down p:hover {
-  transform: scale(1.2);
-}
-
-/* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
-.contact-xs {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  background-color: #e9c46a;
-  box-shadow: 2em 0 3em 0.2em #2a9d8f;
-}
-
-/* line 7, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
-.contact-xs form {
-  display: flex;
-  flex-direction: column;
-}
-
-/* line 11, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
-.contact-xs form > input, .contact-xs textarea {
-  width: 100%;
-  margin: 5px 0;
-  font-size: 24px;
-}
-
-/* line 18, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
-.contact-xs textarea {
-  resize: vertical;
-}
-
-/* line 22, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_contact.scss */
-.contact-xs .contact-form > .name-lastname > input {
-  margin: 5px 0;
-  font-size: 24px;
-  width: 100%;
-}
-
-/* line 1, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_form.scss */
-.contact-xs {
-  border: 1px solid black;
-  border-radius: 20px;
-  margin: 15px;
-}
-
-/* line 5, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_form.scss */
-.contact-xs button {
-  font-size: 2rem;
-  border-radius: 5px;
-}
-
-@media (min-width: 576px) {
-  /* line 2, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_576.scss */
-  .info {
-    line-height: 1.5rem;
-    font-size: 16px;
-  }
-  /* line 6, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_576.scss */
-  .banner-xs {
-    border-radius: 0 0 0 55%;
-  }
-}
-
-@media (min-width: 768px) {
-  /* line 3, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
-  .wrapper {
-    display: flex;
-  }
-  /* line 6, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
-  .wrapper .nav-xs {
-    display: flex;
-    justify-content: center;
-    background-color: black;
-    border-radius: 0 0 50% 0;
-    position: sticky;
-    top: 0;
-  }
-  /* line 13, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
-  .wrapper .nav-xs .logo {
-    margin: 50px;
-  }
-  /* line 16, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
-  .wrapper .nav-xs .menu-xs {
-    display: none;
-  }
-  /* line 19, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
-  .wrapper .nav-xs .navigation {
-    display: block;
-    width: 300px;
-    max-width: 300px;
-    font-size: 2rem;
-  }
-  /* line 29, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
-  .wrapper .container .banner-xs {
-    height: 100vh;
-  }
-  /* line 32, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_768.scss */
-  .wrapper .container .contact-xs {
-    margin: 15px;
-  }
-}
-
-@media (min-width: 992px) {
-  /* line 3, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
-  .container .projects-xs {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  /* line 8, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
-  .container .projects-xs .project-card {
-    width: 30vw;
-  }
-  /* line 12, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
-  .container .contact-xs {
-    display: flex;
-    flex-direction: row;
-  }
-  /* line 15, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
-  .container .contact-xs .info {
-    border: 1px solid black;
-    border-radius: 20px 0 0 20px;
-    margin-right: 15px;
-    padding: 15px;
-  }
-  /* line 23, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
-  .container .contact-xs form > .name-lastname {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  /* line 27, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_992.scss */
-  .container .contact-xs form > .name-lastname .in-name, .container .contact-xs form > .name-lastname .in-lastname {
-    width: 49%;
-  }
-}
-
-@media (min-width: 1200px) {
-  /* line 5, ../../../Users/ekonc/Documents/GitHub/portfolioV2/scss/_1200.scss */
-  .container .projects-xs .project-card {
-    width: 20vw;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
+.projects-xs{display:flex;flex-direction:column}.projects-xs .project-card{display:flex;flex-direction:column;padding:15px;border:1px solid black;border-radius:15px;margin:15px;background-color:#e9c46a;box-shadow:2em 0 3em 0.2em #2a9d8f}.projects-xs .project-card img{width:100%;height:auto;object-fit:cover}*{box-sizing:border-box}body,h1,h2,h3{margin:0;padding:0}ul,a,li{text-decoration:none;list-style-type:none;color:#000}a:visited{color:#000}a:hover{text-decoration:underline}.wrapper{background-color:#f4a261}.info{line-height:1.5rem;font-size:12px}.coding{display:flex;flex-wrap:wrap;flex-direction:column;justify-content:center;text-align:center;height:72vh;font-size:16px;border:1px solid black;border-radius:15px;margin:15px;background-color:#e9c46a;box-shadow:-0.2em 0 1em 0.1em #2a9d8f}.scheme{display:flex;flex-wrap:wrap;flex-direction:column;text-align:left;height:auto;font-size:14px;padding:15px;border:1px solid black;border-radius:15px;margin:15px;background-color:#e9c46a;box-shadow:-0.2em 0 1em 0.1em #2a9d8f}.scheme a{font-size:24px}.scheme h1{margin:15px;text-align:center}.scheme p{font-size:16px}.nav-xs{display:flex;flex-wrap:wrap;flex-direction:row;justify-content:space-between;align-items:center;height:100px}.logo{background-color:#000;border-radius:50%;color:white;width:auto;font-size:2rem;margin:10px}.logo>a{color:white;text-decoration:none}.menu-xs{display:inline-block;padding:10px;margin:10px;border-radius:5px;cursor:pointer}.ham1,.ham2,.ham3{background-color:white;width:35px;height:5px;margin:6px 0;transition:0.4s}.change .ham1{transform:translate(0, 11px) rotate(-45deg)}.change .ham2{opacity:0}.change .ham3{transform:translate(0, -11px) rotate(45deg)}.navigation{display:none}.vis-on{display:block;width:100vw;height:auto;background-color:#f4a261;font-size:2.2rem;z-index:1}.banner-xs{display:flex;flex-direction:column;background-image:url("../images/IMG20221227120206.jpg");background-size:cover;background-position:center;height:calc(100vh - 100px);overflow:hidden;padding:0 10px}.banner-xs .card{text-align:center;margin:auto}.banner-xs .card .card-inner{background-color:#e9c46a;border-radius:15px;font-size:20px;color:black;padding:1vh 15px;box-shadow:-1em 0 5em 3em #f4a261}.scroll-down{text-align:center;font-size:2rem;text-transform:uppercase;margin:0 auto;padding-bottom:5px}.scroll-down p{color:white;margin:0}.scroll-down p:hover{transform:scale(1.2)}.contact-xs{display:flex;flex-direction:column;padding:15px;background-color:#e9c46a;box-shadow:2em 0 3em 0.2em #2a9d8f}.contact-xs form{display:flex;flex-direction:column}.contact-xs form>input,.contact-xs textarea{width:100%;margin:5px 0;font-size:24px}.contact-xs textarea{resize:vertical}.contact-xs .contact-form>.name-lastname>input{margin:5px 0;font-size:24px;width:100%}.contact-xs{border:1px solid black;border-radius:20px;margin:15px}.contact-xs button{font-size:2rem;border-radius:5px}@media (min-width: 576px){.info{line-height:1.5rem;font-size:16px}.banner-xs{border-radius:0 0 0 55%}}@media (min-width: 768px){.wrapper{display:flex}.wrapper .nav-xs{display:flex;justify-content:center;background-color:black;border-radius:0 0 50% 0;position:sticky;top:0}.wrapper .nav-xs .logo{margin:50px}.wrapper .nav-xs .menu-xs{display:none}.wrapper .nav-xs .navigation{display:block;width:300px;max-width:300px;font-size:2rem}.wrapper .container .banner-xs{height:100vh}.wrapper .container .contact-xs{margin:15px}}@media (min-width: 992px){.container .projects-xs{display:flex;flex-wrap:wrap;flex-direction:row;justify-content:space-around}.container .projects-xs .project-card{width:30vw}.container .contact-xs{display:flex;flex-direction:row}.container .contact-xs .info{border:1px solid black;border-radius:20px 0 0 20px;margin-right:15px;padding:15px}.container .contact-xs form>.name-lastname{display:flex;flex-direction:row;justify-content:space-between}.container .contact-xs form>.name-lastname .in-name,.container .contact-xs form>.name-lastname .in-lastname{width:49%}}@media (min-width: 1200px){.container .projects-xs .project-card{width:20vw}}
