--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -1,7 +1,8 @@
 .banner-xs{
   display: flex;
   flex-direction: column;
-  background-image: url("../images/banner.jpg");
+  // background-image: url("../images/banner.jpg");
+  background-image: url("../images/IMG20221227120206.jpg");
   background-size: cover;
   background-position: center;
   height: calc(100vh - 100px);
