--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -77,3 +77,49 @@ a:hover{
   }
 
 }
+////////////////////
+//text animation
+//////////////////
+$black: #2b2b2b;
+@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap');
+$size: 42px;
+.typing-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+    #feature-text {
+      margin-left: 8px;
+    }
+    .input-cursor {
+      display: inline-block;
+      width: 2px;
+      height: $size;
+      background-color: white;
+      margin-left: 8px;
+      animation: blink .6s linear infinite alternate;
+    }
+  }
+
+  @keyframes blink {
+    0% {opacity: 1;}
+    40% {opacity: 1;}
+    60% {opacity: 0;}
+    100% {opacity: 0;}
+  }
+
+////////////////////////////////////////////
+//email validation errors
+////////////////////////////////////////////
+#nameErr, #lastnameErr{
+  position: absolute;
+  bottom: 50px;
+  color: red;
+  font-size: 16px;
+}
+.error{
+  border: 2px solid red;
+}
+.valid{
+  border: 2px solid green;
+}
