--- a/scss/_992.scss
+++ b/scss/_992.scss
@@ -1,4 +1,12 @@
 @media (min-width: 992px) {
+
+  #nameErr, #lastnameErr{
+    position: absolute;
+    bottom: 50px;
+    color: red;
+    font-size: 16px;
+
+  }
   .container{
     .projects-xs{
       display: flex;
