--- a/scss/_1200.scss
+++ b/scss/_1200.scss
@@ -1,4 +1,20 @@
 @media (min-width: 1200px) {
+  .name-lastname{
+    display: inline-flex;
+    justify-content: space-between;
+    .name, .lastName{
+      margin: 5px 0;
+      font-size: 24px;
+      width: 49%;
+    }
+  }
+  #nameErr, #lastnameErr{
+    position: absolute;
+    bottom: 50px;
+    color: red;
+    font-size: 16px;
+
+  }
   .container{
     .projects-xs{
 
